--- a/movies_project/package.json
+++ b/movies_project/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "gh-pages": "^6.1.1",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
