--- a/movies_project/package.json
+++ b/movies_project/package.json
@@ -2,13 +2,13 @@
   "name": "movies_project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Dadasha19.github.io/movie_project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
-    "gh-pages": "^6.1.1",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
